syntax = "proto3";

option go_package = "./pb";
package pb;
import "userModel.proto";
//model
message GetUserInfoReq {
  int64  id = 1;
}

message GetUserInfoResp {
  uint32 code = 1;
  string msg = 2;
  pb.UserModel data = 3;
}

//service
service userCenter {
  rpc GetUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
}

